--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seodetectorfortest",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Is a lite SEO detector for test",
   "main": "index.js",
   "dependencies": {
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node index.js"
+    "test": "node demo.js"
   },
   "repository": {
     "type": "git",
