--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seodetectorfortest",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Is a lite SEO detector for test",
   "main": "index.js",
   "dependencies": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chonpin/NodeChallenge.git"
+    "url": "git+https://github.com/chonpin/SeoDetector.git"
   },
   "keywords": [
     "seo",
@@ -21,7 +21,7 @@
   "author": "chonpin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chonpin/NodeChallenge/issues"
+    "url": "https://github.com/chonpin/SeoDetector/issues"
   },
-  "homepage": "https://github.com/chonpin/NodeChallenge#readme"
+  "homepage": "https://github.com/chonpin/SeoDetector#readme"
 }
